Thu Aug 24 18:48:01 1995  Theodore Y. Ts'o  <tytso@dcl>

	* .Sanitize: Update file list

Wed Jun 21 18:13:11 1995  Theodore Y. Ts'o  <tytso@dcl>

	* configure.in: Remove AC_CONFIG_FRAGMENTS call, since it's no
		longer needed.  (The aclocal.m4 V5_SET_TOPTREE handles it
		all automatically now.)

Fri Jun  9 18:58:29 1995    <tytso@rsx-11.mit.edu>

	* configure.in: Remove standardized set of autoconf macros, which
		are now handled by CONFIG_RULES.

Wed Apr 26 18:41:04 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* configure.in: Check for runtest program present on system for
		make check. 

	* Makefile.in (check): Run runtest only if present on system
	              (install): do nothing

	
