@@ -2,4 +2,8 @@ AC_INIT(Makefile.in)
 CONFIG_RULES
 AC_PROG_INSTALL
 AC_CHECK_PROG(RUNTEST,runtest,runtest)
+AC_RETSIGTYPE
+CHECK_SIGNALS
+KRB5_LIBRARIES
+V5_USE_SHARED_LIB
 V5_AC_OUTPUT_MAKEFILE
